--- a/project/project/dip512.xaml
+++ b/project/project/dip512.xaml
@@ -20,17 +20,17 @@
 
             <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="3" BackgroundColor="Black" >
 
-                <Label Text="NZ Diploma in Web Development and design"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+                <Label Text="NZ Diploma in Web Development and design"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
             </StackLayout>
-            <Label Text="Semester2"  Grid.Row="1" Grid.ColumnSpan="3" FontSize="10" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+            <Label Text="Semester2"  Grid.Row="1" Grid.ColumnSpan="3" FontSize="10" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-            <Label Text="Comp 5209 Interface Analysis and Design"  Grid.Row="2" Grid.Column="0" FontSize="11" BackgroundColor="LightBlue" VerticalTextAlignment="Center"/>
-            <Label Text="Comp.5210 Web Application Implimentation" Grid.Row="2"  Grid.Column="2" FontSize="11" BackgroundColor="LightBlue" VerticalTextAlignment="Center"/>
-            <Label Text="Comp.5211 Application Testing and Maintainence" Grid.Row="3" Grid.Column="0" FontSize="11" BackgroundColor="LightBlue" VerticalTextAlignment="Center"/>
+            <Label Text="Comp 5209 Interface Analysis and Design"  Grid.Row="2" Grid.Column="0" FontSize="11" BackgroundColor="#0080ff" VerticalTextAlignment="Center"/>
+            <Label Text="Comp.5210 Web Application Implimentation" Grid.Row="2"  Grid.Column="2" FontSize="11" BackgroundColor="#0080ff" VerticalTextAlignment="Center"/>
+            <Label Text="Comp.5211 Application Testing and Maintainence" Grid.Row="3" Grid.Column="0" FontSize="11" BackgroundColor="#0080ff" VerticalTextAlignment="Center"/>
             
-            <Label Text="Comp.5212 Programming" Grid.Row="4" Grid.Column="0" FontSize="11" VerticalTextAlignment="Center" BackgroundColor="LightBlue"/>
+            <Label Text="Comp.5212 Programming" Grid.Row="4" Grid.Column="0" FontSize="11" VerticalTextAlignment="Center" BackgroundColor="#0080ff"/>
                 <Label Text="OR" Grid.Row="4" Grid.Column="1" FontSize="11" BackgroundColor="White"  YAlign="Center"  TextColor="Blue"/>
-                <Label Text="Comp.5213 Special Topic" Grid.Row="4" Grid.Column="2" FontSize="11" VerticalTextAlignment="Center" BackgroundColor="LightBlue"/>
+                <Label Text="Comp.5213 Special Topic" Grid.Row="4" Grid.Column="2" FontSize="11" VerticalTextAlignment="Center" BackgroundColor="#0080ff"/>
        
             <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="5" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
         </Grid>
