--- a/project/project/dip52.xaml
+++ b/project/project/dip52.xaml
@@ -19,17 +19,17 @@
 
         <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="WhiteSmoke">
 
-            <Label Text="NZ Diploma in IT Technical Support(level 5)"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+            <Label Text="NZ Diploma in IT Technical Support(level 5)"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
             </StackLayout>
 
-        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="11" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="11" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-        <Label Text="Comp 5201 Information Technology Operations" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="LightBlue"/>
-        <Label Text="Comp.5202 Fundamentals of Programming and Problem Solving" Grid.Row="2" Grid.Column="1" FontSize="11" BackgroundColor="LightBlue" VerticalTextAlignment="Center" />
-        <Label Text="Comp.5203 Professional Practice" Grid.Row="3" Grid.Column="0" FontSize="11" BackgroundColor="LightBlue" VerticalTextAlignment="Center" />
-        <Label Text="Comp.5204 Enterprise" Grid.Row="3" Grid.Column="1"  FontSize="11" BackgroundColor="LightBlue" VerticalTextAlignment="Center"/>
+        <Label Text="Comp 5201 Information Technology Operations" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="#0080ff"/>
+        <Label Text="Comp.5202 Fundamentals of Programming and Problem Solving" Grid.Row="2" Grid.Column="1" FontSize="11" BackgroundColor="#0080ff" VerticalTextAlignment="Center" />
+        <Label Text="Comp.5203 Professional Practice" Grid.Row="3" Grid.Column="0" FontSize="11" BackgroundColor="#0080ff" VerticalTextAlignment="Center" />
+        <Label Text="Comp.5204 Enterprise" Grid.Row="3" Grid.Column="1"  FontSize="11" BackgroundColor="#0080ff" VerticalTextAlignment="Center"/>
 
-        <Button Text="Semester2" x:Name="Dip522" Clicked="Dip522_Clicked" Grid.ColumnSpan="2" Grid.Row="4" FontSize="11" WidthRequest="200" BackgroundColor="LightBlue"/>
+        <Button Text="Semester2" x:Name="Dip522" Clicked="Dip522_Clicked" Grid.ColumnSpan="2" Grid.Row="4" FontSize="11" WidthRequest="200" BackgroundColor="#0080ff"/>
 
         <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="5" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
         <Button Text="Requirements" Margin="3,0,2,2" TextColor="Black" Grid.Column="1" Grid.Row="5" BorderColor="Black" MinimumWidthRequest="30" HorizontalOptions="End" FontSize="11" BackgroundColor="White" />
