--- a/project/project/dip522.xaml
+++ b/project/project/dip522.xaml
@@ -20,14 +20,14 @@
 
             <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="3" BackgroundColor="Black" >
 
-                <Label Text="NZ Diploma in Web Development and design"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+                <Label Text="NZ Diploma in Web Development and design"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
             </StackLayout>
-            <Label Text="Semester2"  Grid.Row="1" Grid.ColumnSpan="3" FontSize="10" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+            <Label Text="Semester2"  Grid.Row="1" Grid.ColumnSpan="3" FontSize="10" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
            
-            <Label Text="Comp 5205 Database Administration" Grid.Row="2" Grid.Column="0" BackgroundColor="LightBlue"/>
-    <Label Text="Comp.5206 Introduction to Networks" Grid.Row="2" Grid.Column="1" BackgroundColor="LightBlue" />
-    <Label Text="Comp.5207 Operating Systems" Grid.Row="3" Grid.Column="0" BackgroundColor="LightBlue" />
-    <Label Text="Comp.5208 Technical Support" Grid.Row="3" Grid.Column="1" BackgroundColor="LightBlue"/>
+            <Label Text="Comp 5205 Database Administration" Grid.Row="2" Grid.Column="0" BackgroundColor="#0080ff"/>
+    <Label Text="Comp.5206 Introduction to Networks" Grid.Row="2" Grid.Column="1" BackgroundColor="#0080ff" />
+    <Label Text="Comp.5207 Operating Systems" Grid.Row="3" Grid.Column="0" BackgroundColor="#0080ff" />
+    <Label Text="Comp.5208 Technical Support" Grid.Row="3" Grid.Column="1" BackgroundColor="#0080ff"/>
     <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="4" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
    
         </Grid>
