--- a/project/project/dip61.xaml
+++ b/project/project/dip61.xaml
@@ -22,20 +22,20 @@
 
             <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="3" BackgroundColor="Black" >
 
-                    <Label Text="NZ Diploma in Networking(level 6)"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+                    <Label Text="NZ Diploma in Networking(level 6)"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
             </StackLayout>
 
-        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="3"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="3"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-        <Label Text="Comp 6201 Rounting and Switching" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="LightBlue"/>
-        <Label Text="Comp.6203 Connecting Networks" Grid.Row="2" Grid.Column="3" BackgroundColor="LightBlue" />
-        <Label Text="Comp.6204 Voice Networks" Grid.Row="3" Grid.Column="0" BackgroundColor="LightBlue" />
-        <Label Text="Comp.6217 Hardware Technology " Grid.Row="4" Grid.Column="0" BackgroundColor="LightBlue"/>
+        <Label Text="Comp 6201 Rounting and Switching" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="#0080ff"/>
+        <Label Text="Comp.6203 Connecting Networks" Grid.Row="2" Grid.Column="3" BackgroundColor="#0080ff" />
+        <Label Text="Comp.6204 Voice Networks" Grid.Row="3" Grid.Column="0" BackgroundColor="#0080ff" />
+        <Label Text="Comp.6217 Hardware Technology " Grid.Row="4" Grid.Column="0" BackgroundColor="#0080ff"/>
         <Label Text="OR" Grid.Row="4" Grid.Column="1" FontSize="11" BackgroundColor="White"  YAlign="Center"  TextColor="Blue"/>
-        <Label Text="Comp.6207 Special Topic " Grid.Row="4" Grid.Column="3" BackgroundColor="LightBlue"/>
+        <Label Text="Comp.6207 Special Topic " Grid.Row="4" Grid.Column="3" BackgroundColor="#0080ff"/>
 
-        <Button Text="Semester2" x:Name="Dip612" Clicked="Dip612_Clicked" Grid.ColumnSpan="2" Grid.Row="5" FontSize="11" WidthRequest="200"  BackgroundColor="LightBlue"/>
+        <Button Text="Semester2" x:Name="Dip612" Clicked="Dip612_Clicked" Grid.ColumnSpan="2" Grid.Row="5" FontSize="11" WidthRequest="200"  BackgroundColor="#0080ff"/>
         <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="6" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
         <Button Text="Requirements" Margin="3,0,2,2" TextColor="Black" Grid.Column="3" Grid.Row="6" BorderColor="Black" MinimumWidthRequest="30" HorizontalOptions="End" FontSize="12" BackgroundColor="White" />
 
