--- a/project/project/dip622.xaml
+++ b/project/project/dip622.xaml
@@ -19,14 +19,14 @@
 
             <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="3" BackgroundColor="Black" >
 
-                <Label Text="NZ Diploma in Web Development and design"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+                <Label Text="NZ Diploma in Web Development and design"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
             </StackLayout>
-            <Label Text="Semester2"  Grid.Row="1" Grid.ColumnSpan="3" FontSize="10" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+            <Label Text="Semester2"  Grid.Row="1" Grid.ColumnSpan="3" FontSize="10" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-            <Label Text="Comp 6213 Project Management" Grid.Row="2" Grid.Column="0" FontSize="11" BackgroundColor="LightBlue" VerticalTextAlignment="Center"/>
-            <Label Text="Comp.6214 Project2" Grid.Row="2"  Grid.Column="2" FontSize="11" BackgroundColor="LightBlue" VerticalTextAlignment="Center" />
-            <Label Text="Comp.6215 Graphical User Interface Programming" Grid.Row="3" Grid.Column="0" FontSize="11" BackgroundColor="LightBlue" VerticalTextAlignment="Center" />
-            <Label Text="Comp.6207 Special Topic" Grid.Row="3" Grid.Column="3" FontSize="11" VerticalTextAlignment="Center" TextColor="Red" BackgroundColor="LightBlue" />
+            <Label Text="Comp 6213 Project Management" Grid.Row="2" Grid.Column="0" FontSize="11" BackgroundColor="#0080ff" VerticalTextAlignment="Center"/>
+            <Label Text="Comp.6214 Project2" Grid.Row="2"  Grid.Column="2" FontSize="11" BackgroundColor="#0080ff" VerticalTextAlignment="Center" />
+            <Label Text="Comp.6215 Graphical User Interface Programming" Grid.Row="3" Grid.Column="0" FontSize="11" BackgroundColor="#0080ff" VerticalTextAlignment="Center" />
+            <Label Text="Comp.6207 Special Topic" Grid.Row="3" Grid.Column="3" FontSize="11" VerticalTextAlignment="Center" TextColor="Red" BackgroundColor="#0080ff" />
 
             <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="4" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
         </Grid>
