--- a/project/project/dip73.xaml
+++ b/project/project/dip73.xaml
@@ -21,22 +21,22 @@
         </Grid.RowDefinitions>
         <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Black" >
 
-            <Label Text="Graduate Diploma of Software Development(level 7)"  FontSize="24" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+            <Label Text="Graduate Diploma of Software Development(level 7)"  FontSize="24" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
         </StackLayout>
 
-        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-        <Label Text="Comp 6209 System Analysis and Design" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="LightBlue"/>
-        <Label Text="Comp.6211 Algorithm and Data Structure" Grid.Row="2" Grid.Column="1" BackgroundColor="LightBlue" />
-        <Label Text="Comp.6212 Data Management " Grid.Row="3" Grid.Column="0" BackgroundColor="LightBlue" />
-        <Label Text="Comp.7212 Artificial Intelligence" Grid.Row="3" Grid.Column="1" BackgroundColor="LightBlue"/>
+        <Label Text="Comp 6209 System Analysis and Design" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="#0080ff"/>
+        <Label Text="Comp.6211 Algorithm and Data Structure" Grid.Row="2" Grid.Column="1" BackgroundColor="#0080ff" />
+        <Label Text="Comp.6212 Data Management " Grid.Row="3" Grid.Column="0" BackgroundColor="#0080ff" />
+        <Label Text="Comp.7212 Artificial Intelligence" Grid.Row="3" Grid.Column="1" BackgroundColor="#0080ff"/>
 
-        <Label Text="Semester2"  Grid.Row="4" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="LightBlue" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester2"  Grid.Row="4" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-        <Label Text="Comp 7211 User Interface Programming" Grid.Row="5" Grid.Column="0" BackgroundColor="LightBlue"/>
-        <Label Text="Comp.7216 Advance System Analysis and Design" Grid.Row="5" Grid.Column="1" BackgroundColor="LightBlue" />
-        <Label Text="GENR.7101 Project" Grid.Row="6" Grid.Column="0" BackgroundColor="LightBlue" />
+        <Label Text="Comp 7211 User Interface Programming" Grid.Row="5" Grid.Column="0" BackgroundColor="#0080ff"/>
+        <Label Text="Comp.7216 Advance System Analysis and Design" Grid.Row="5" Grid.Column="1" BackgroundColor="#0080ff" />
+        <Label Text="GENR.7101 Project" Grid.Row="6" Grid.Column="0" BackgroundColor="#0080ff" />
         <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="7" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
     </Grid>
 </ContentPage>
