--- a/project/project/dip522.xaml
+++ b/project/project/dip522.xaml
@@ -33,3 +33,52 @@
         </Grid>
     </ContentPage.Content>
 </ContentPage>
+<Grid >
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width=".5*" />
+        <ColumnDefinition Width="*" />
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+        <RowDefinition Height="60"/>
+        <RowDefinition Height="20"/>
+
+        <RowDefinition Height="53"/>
+        <RowDefinition Height="53"/>
+        <RowDefinition Height="53"/>
+        <RowDefinition Height="53"/>
+
+        <RowDefinition Height="20"/>
+        <RowDefinition Height="53"/>
+        <RowDefinition Height="53"/>
+        <RowDefinition Height="53"/>
+        <RowDefinition Height="53"/>
+        <RowDefinition Height="60"/>
+    </Grid.RowDefinitions>
+
+    <Label Text="" Grid.Row="0" FontSize="25" Grid.ColumnSpan="3" TextColor="White" FontFamily="ovo" BackgroundColor="#0080ff"  VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+
+
+    <Label Text="Semester1" Grid.Row="1"  FontSize="15" VerticalTextAlignment= "Center" Grid.ColumnSpan="3" TextColor="white" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+
+    <Label Text="" VerticalTextAlignment="Center" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" FontSize="15" Grid.Row="2" BackgroundColor="#51A2D5"/>
+    <Label Text="" Grid.ColumnSpan="3" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" FontSize="15" Grid.Row="3" BackgroundColor="#51A2D5" />
+    <Label Text="" Grid.ColumnSpan="3" VerticalTextAlignment="Center" FontSize="15" Grid.Row="4" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5" />
+    <Label Text="" Grid.ColumnSpan="3" Grid.Row="5"  VerticalTextAlignment="Center" FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"/>
+
+    <Label Text="Semester2" x:Name="" Grid.ColumnSpan="3" TextColor="white" Grid.Row="6" FontSize="15" WidthRequest="200" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" BackgroundColor="#0080ff"/>
+
+    <Label Text="" Grid.ColumnSpan="3"  Grid.Row="7"   FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"  VerticalTextAlignment="Center"/>
+    <Label Text="" Grid.ColumnSpan="3" Grid.Row="8"    FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"  VerticalTextAlignment="Center"/>
+    <Label Text="Comp.5207 Operating Systems" Grid.ColumnSpan="3" Grid.Row="9"  FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5" VerticalTextAlignment="Center"/>
+
+    <Label Text="Comp.5208 Technical Support" Grid.Row="10" Grid.Column="0" FontSize="15" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"  BackgroundColor="#51A2D5"/>
+    <!--<Label Text="OR" Grid.Row="10" Grid.Column="1" FontSize="15" BackgroundColor="White"  YAlign="Center" HorizontalTextAlignment="Center"  VerticalTextAlignment="Center"  TextColor="Black"/>
+    <Label Text=" Special Topic" Grid.Row="10" Grid.Column="2"  FontSize="15" HorizontalTextAlignment="Center"  VerticalTextAlignment="Center" BackgroundColor="#51A2D5"/>-->
+    <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="11" Grid.Column="0" Margin="0,15,0,0" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+    <!--<ImageButton x:Name="home" Clicked="home_Clicked" Grid.Row="11" Grid.Column="1" BorderColor="Black" HorizontalOptions="Center" Source="Resources/drawable/hm.PNG"></ImageButton>-->
+    <Button Text="Click Here For Requirements" x:Name="requirements" Grid.ColumnSpan="2" Clicked="requirement_Clicked" TextColor="DarkBlue"  Grid.Row="11" Grid.Column="1" BorderColor="Black" HorizontalOptions="Center" FontSize="12" BackgroundColor="Transparent" />
+
+</Grid>
+
+</ContentPage>
