--- a/project/project/deglevel5.xaml
+++ b/project/project/deglevel5.xaml
@@ -2,38 +2,57 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="project.deglevel5">
-    <Grid Margin="10,10,10,10">
+    <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width=".5*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="20"/>
 
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
+
+        <Label Text="Degree Level 5" Grid.Row="0" FontSize="25" Grid.ColumnSpan="3" TextColor="White" FontFamily="ovo" BackgroundColor="#0080ff"  VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+
+
+        <Label Text="Semester1" Grid.Row="1"  FontSize="15" VerticalTextAlignment= "Center" Grid.ColumnSpan="3" TextColor="white" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+
+        <Label Text="Comp 5209 Information Technology Operation" TextColor="white" VerticalTextAlignment="Center" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" FontSize="15" Grid.Row="2" BackgroundColor="#51A2D5"/>
+        <Label Text="Comp.5202 Fundamentals of Programming and Problem Solving" TextColor="white" Grid.ColumnSpan="3" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" FontSize="15" Grid.Row="3" BackgroundColor="#51A2D5" />
+        <Label Text="Comp.5203 Professional Practice" Grid.ColumnSpan="3" TextColor="white" VerticalTextAlignment="Center" FontSize="15" Grid.Row="4" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5" />
+        <Label Text="Comp.5204 Enterprise" Grid.ColumnSpan="3" Grid.Row="5" TextColor="white" VerticalTextAlignment="Center" FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"/>
+
+        <Label Text="Semester2" Grid.ColumnSpan="3" TextColor="white" Grid.Row="6" FontSize="15" WidthRequest="200" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" BackgroundColor="#0080ff"/>
        
-        <Label Text="Semester1(Level 5)" Grid.Row="0" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+        <Button  Text="Level 5 Elective " x:Name="deg51" Clicked="deg51_Clicked" Grid.ColumnSpan="3"  Grid.Row="7" TextColor="White"   FontSize="15" BackgroundColor="#51A2D5" />
+        <Button Text="Level 5 Elective " x:Name="deg52" Clicked="deg52_Clicked" Grid.ColumnSpan="3" Grid.Row="8" TextColor="White"   FontSize="15" BackgroundColor="#51A2D5" />
+        <Button Text="Level 5 Elective " x:Name="deg53" Clicked="deg53_Clicked" Grid.ColumnSpan="3" Grid.Row="9" TextColor="White" FontSize="15"  BackgroundColor="#51A2D5" />
+        <Button Text="Level 5 Elective " x:Name="deg54" Clicked="deg54_Clicked" Grid.ColumnSpan="3" Grid.Row="10" TextColor="White" FontSize="15"  BackgroundColor="#51A2D5" />
+        
 
-        <Label Text="Comp 5209 Information Technology Operation" VerticalTextAlignment="Center" Grid.Row="1" Grid.Column="0" BackgroundColor="#0080ff"/>
-        <Label Text="Comp.5202 Fundamentals of Programming and Problem Solving" Grid.Row="1" Grid.Column="1" BackgroundColor="#0080ff" />
-        <Label Text="Comp.5203 Professional Practice " Grid.Row="2" Grid.Column="0" BackgroundColor="#0080ff" />
-        <Label Text="Comp.5204 Enterprise " Grid.Row="2" Grid.Column="1" BackgroundColor="#0080ff"/>
+        <!--<Button  Text="select " Grid.Row="0" Grid.Column="0" Clicked="Button_Clicked1_1"/>
+        <Label x:Name="Contact1_1"  Text=" contact 1" IsEnabled="False" Grid.Row="0" Grid.Column="1"/>-->
 
-        <Label Text="Semester2 (Level5)"  Grid.Row="3" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="11" Grid.Column="0" Margin="0,15,0,0" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+        <!--<ImageButton x:Name="home" Clicked="home_Clicked" Grid.Row="11" Grid.Column="1" BorderColor="Black" HorizontalOptions="Center" Source="Resources/drawable/hm.PNG"></ImageButton>-->
+        <Button Text="Click Here For Requirements" x:Name="requirements" Grid.ColumnSpan="2" Clicked="requirement_Clicked" TextColor="DarkBlue"  Grid.Row="11" Grid.Column="1" HorizontalOptions="Center" FontSize="12" BackgroundColor="Transparent" />
 
-        <Button Text="Level 5 Elective " x:Name="deg51" Clicked="deg51_Clicked" Grid.Row="4" Grid.Column="0" BackgroundColor="#0080ff"/>
-        <Button Text="Level 5 Elective" x:Name="deg52" Clicked="deg52_Clicked" Grid.Row="4" Grid.Column="1" BackgroundColor="#0080ff" />
-        <Button Text="Level 5 Elective" x:Name="deg53" Clicked="deg53_Clicked" Grid.Row="5" Grid.Column="0" BackgroundColor="#0080ff" />
-        <Button Text="Level 5 Elective" x:Name="deg54" Clicked="deg54_Clicked" Grid.Row="5" Grid.Column="1" BackgroundColor="#0080ff" />
-        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="6" Grid.Column="0" Source="Assets/back.PNG"></ImageButton>
-        <ImageButton x:Name="next" Clicked="Next_Clicked" Grid.Row="6" Grid.Column="1" Source="Assets/next.PNG"></ImageButton>
     </Grid>
+
 </ContentPage>
+
+        
+     
