--- a/project/project/dip62.xaml
+++ b/project/project/dip62.xaml
@@ -2,38 +2,51 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="project.dip62">
-    
-<Grid Margin="10,10,10,10">
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="*" />
-    </Grid.ColumnDefinitions>
-    <Grid.RowDefinitions>
-        <RowDefinition Height="30"/>
-        <RowDefinition Height="20"/>
-        <RowDefinition Height="50"/>
-        <RowDefinition Height="50"/>
-        <RowDefinition Height="30"/>
-        <RowDefinition Height="50"/>
-    </Grid.RowDefinitions>
+    <Grid >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width=".5*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="20"/>
 
-    <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Black" >
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
 
-        <Label Text="NZ Diploma in Software Development(level 6)"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="60"/>
+        </Grid.RowDefinitions>
 
-    </StackLayout>
+        <Label Text="NZ Diploma in Software Development(level 6)" Grid.Row="0" FontSize="25" Grid.ColumnSpan="3" TextColor="White" FontFamily="ovo" BackgroundColor="#0080ff"  VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
 
-    <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="11" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-    <Label Text="Comp 6209 System Analysis and Design" VerticalTextAlignment="Center" FontSize="11" Grid.Row="2" Grid.Column="0" BackgroundColor="#0080ff"/>
-    <Label Text="Comp.6210 Web Serrvices and Design Methodologies" VerticalTextAlignment="Center" FontSize="11" Grid.Row="2" Grid.Column="1" BackgroundColor="#0080ff" />
-    <Label Text="Comp.6211 Algorithm and Data Structure" VerticalTextAlignment="Center" FontSize="11" Grid.Row="3" Grid.Column="0" BackgroundColor="#0080ff" />
-    <Label Text="Comp.6212 Data Management" Grid.Row="3" Grid.Column="1" VerticalTextAlignment="Center" FontSize="11" BackgroundColor="#0080ff"/>
+        <Label Text="Semester1" Grid.Row="1"  FontSize="15" VerticalTextAlignment= "Center" Grid.ColumnSpan="3" TextColor="white" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-    <Button Text="Semester2" x:Name="Dip622" Clicked="Dip622_Clicked" Grid.ColumnSpan="2" Grid.Row="4" FontSize="11" WidthRequest="200" BackgroundColor="#0080ff"/>
+        <Label Text="Comp 6209 System Analysis and Design" VerticalTextAlignment="Center" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" FontSize="15" Grid.Row="2" BackgroundColor="#51A2D5"/>
+        <Label Text="Comp.6210 Web Serrvices and Design Methodologies" Grid.ColumnSpan="3" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" FontSize="15" Grid.Row="3" BackgroundColor="#51A2D5" />
+        <Label Text="Comp.6211 Algorithm and Data Structure" Grid.ColumnSpan="3" VerticalTextAlignment="Center" FontSize="15" Grid.Row="4" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5" />
+        <Label Text="Comp.6212 Data Management" Grid.ColumnSpan="3" Grid.Row="5"  VerticalTextAlignment="Center" FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"/>
 
-    <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="5" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
-    <Button Text="Requirements" Margin="3,0,2,2" TextColor="Black" Grid.Column="1" Grid.Row="5" BorderColor="Black" MinimumWidthRequest="30" HorizontalOptions="End" FontSize="12" BackgroundColor="White" />
+        <Label Text="Semester2" Grid.ColumnSpan="3" TextColor="white" Grid.Row="6" FontSize="15" WidthRequest="200" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" BackgroundColor="#0080ff"/>
 
-</Grid>
+        <Label Text="Comp 6213 Project Management" Grid.ColumnSpan="3"  Grid.Row="7"   FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"  VerticalTextAlignment="Center"/>
+        <Label Text="Comp.6214 Project2" Grid.ColumnSpan="3" Grid.Row="8"    FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"  VerticalTextAlignment="Center"/>
+        <Label Text="Comp.6215 Graphical User Interface Programming" Grid.ColumnSpan="3" Grid.Row="9"  FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5" VerticalTextAlignment="Center"/>
+        <Label Text="Comp.6207 Special Topic" Grid.ColumnSpan="3" Grid.Row="10"  FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5" VerticalTextAlignment="Center"/>
+
+        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="11" Grid.Column="0" Margin="0,15,0,0" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+        <!--<ImageButton x:Name="home" Clicked="home_Clicked" Grid.Row="11" Grid.Column="1" BorderColor="Black" HorizontalOptions="Center" Source="Resources/drawable/hm.PNG"></ImageButton>-->
+        <Button Text="Click Here For Requirements" x:Name="requirements" Grid.ColumnSpan="2" Clicked="requirement_Clicked" TextColor="DarkBlue"  Grid.Row="11" Grid.Column="1" HorizontalOptions="Center" FontSize="12" BackgroundColor="Transparent" />
+       
+    </Grid>
+
 </ContentPage>
+   
