--- a/project/project/dip72.xaml
+++ b/project/project/dip72.xaml
@@ -2,37 +2,48 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="project.dip72">
- <Grid Margin="10,10,10,10">
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="*" />
-    </Grid.ColumnDefinitions>
-    <Grid.RowDefinitions>
-        <RowDefinition Height="30"/>
-        <RowDefinition Height="20"/>
-        <RowDefinition Height="50"/>
-        <RowDefinition Height="50"/>
-        <RowDefinition Height="30"/>
-        <RowDefinition Height="50"/>
-    </Grid.RowDefinitions>
+    <Grid >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width=".5*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="20"/>
 
-    <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Black" >
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
 
-        <Label Text="Graduate Diploma of Cyber Security(level 7)"  FontSize="14" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="60"/>
+        </Grid.RowDefinitions>
 
-    </StackLayout>
+        <Label Text="Graduate Diploma of Cyber Security(level 7)" Grid.Row="0" FontSize="25" Grid.ColumnSpan="3" TextColor="White" FontFamily="ovo" BackgroundColor="#0080ff"  VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
 
-    <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="11" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-    <Label Text="Comp 6201 Routing and Switching" VerticalTextAlignment="Center" FontSize="11" Grid.Row="2" Grid.Column="0" BackgroundColor="#0080ff"/>
-    <Label Text="Comp.6203 Connecting Network" VerticalTextAlignment="Center" FontSize="11" Grid.Row="2" Grid.Column="1" BackgroundColor="#0080ff" />
-    <Label Text="Comp.6206 Network Security" VerticalTextAlignment="Center" FontSize="11" Grid.Row="3" Grid.Column="0" BackgroundColor="#0080ff" />
-    <Label Text="Comp.7201 Large network Technologies" Grid.Row="3" Grid.Column="1" VerticalTextAlignment="Center" FontSize="11" BackgroundColor="#0080ff"/>
+        <Label Text="Semester1" Grid.Row="1"  FontSize="15" VerticalTextAlignment= "Center" Grid.ColumnSpan="3" TextColor="white" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-    <Button Text="Semester2" x:Name="Dip722" Clicked="Dip722_Clicked" Grid.ColumnSpan="2" Grid.Row="4" FontSize="11" WidthRequest="200" BackgroundColor="#0080ff"/>
+        <Label Text="Comp 6201 Routing and Switching" VerticalTextAlignment="Center" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" FontSize="15" Grid.Row="2" BackgroundColor="#51A2D5"/>
+        <Label Text="Comp.6203 Connecting Network" Grid.ColumnSpan="3" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" FontSize="15" Grid.Row="3" BackgroundColor="#51A2D5" />
+        <Label Text="Comp.6206 Network Security" Grid.ColumnSpan="3" VerticalTextAlignment="Center" FontSize="15" Grid.Row="4" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5" />
+        <Label Text="Comp.7201 Large network Technologies" Grid.ColumnSpan="3" Grid.Row="5"  VerticalTextAlignment="Center" FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"/>
 
-    <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="5" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
-    <Button Text="Requirements" Margin="3,0,2,2" TextColor="Black" Grid.Column="1" Grid.Row="5" BorderColor="Black" MinimumWidthRequest="30" HorizontalOptions="End" FontSize="12" BackgroundColor="White" />
+        <Label Text="Semester2" Grid.ColumnSpan="3" TextColor="white" Grid.Row="6" FontSize="15" WidthRequest="200" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" BackgroundColor="#0080ff"/>
 
-</Grid>
+        <Label Text="Comp 7202 System Security" Grid.ColumnSpan="3"  Grid.Row="7"   FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"  VerticalTextAlignment="Center"/>
+        <Label Text="Comp.7203 Cyber Security" Grid.ColumnSpan="3" Grid.Row="8"    FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"  VerticalTextAlignment="Center"/>
+        <Label Text=" GENR.7101 Project" Grid.ColumnSpan="3" Grid.Row="9"  FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5" VerticalTextAlignment="Center"/>
+        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="11" Grid.Column="0" Margin="0,15,0,0" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+        <!--<ImageButton x:Name="home" Clicked="home_Clicked" Grid.Row="11" Grid.Column="1" BorderColor="Black" HorizontalOptions="Center" Source="Resources/drawable/hm.PNG"></ImageButton>-->
+        <Button Text="Click Here For Requirements" x:Name="requirements" Grid.ColumnSpan="2" Clicked="requirement_Clicked" TextColor="DarkBlue"  Grid.Row="11" Grid.Column="1" HorizontalOptions="Center" FontSize="12" BackgroundColor="Transparent" />
+
+    </Grid>
+
 </ContentPage>
