--- a/project/project/dip73.xaml
+++ b/project/project/dip73.xaml
@@ -2,41 +2,51 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="project.dip73">
-    <Grid Margin="10,10,10,10">
+    <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width=".5*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="60"/>
             <RowDefinition Height="20"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
 
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
-        <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Black" >
 
-            <Label Text="Graduate Diploma of Software Development(level 7)"  FontSize="24" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+        <Label Text="Graduate Diploma of Software Development(level 7)" Grid.Row="0" FontSize="25" Grid.ColumnSpan="3" TextColor="White" FontFamily="ovo" BackgroundColor="#0080ff"  VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
 
-        </StackLayout>
 
-        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester1" Grid.Row="1"  FontSize="15" VerticalTextAlignment= "Center" Grid.ColumnSpan="3" TextColor="white" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-        <Label Text="Comp 6209 System Analysis and Design" VerticalTextAlignment="Center" Grid.Row="2" Grid.Column="0" BackgroundColor="#0080ff"/>
-        <Label Text="Comp.6211 Algorithm and Data Structure" Grid.Row="2" Grid.Column="1" BackgroundColor="#0080ff" />
-        <Label Text="Comp.6212 Data Management " Grid.Row="3" Grid.Column="0" BackgroundColor="#0080ff" />
-        <Label Text="Comp.7212 Artificial Intelligence" Grid.Row="3" Grid.Column="1" BackgroundColor="#0080ff"/>
+        <Label Text="Comp 6209 System Analysis and Design" VerticalTextAlignment="Center" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" FontSize="15" Grid.Row="2" BackgroundColor="#51A2D5"/>
+        <Label Text="Comp.6211 Algorithm and Data Structure" Grid.ColumnSpan="3" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" FontSize="15" Grid.Row="3" BackgroundColor="#51A2D5" />
+        <Label Text="Comp.6212 Data Management" Grid.ColumnSpan="3" VerticalTextAlignment="Center" FontSize="15" Grid.Row="4" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5" />
+        <Label Text="Comp.7212 Artificial Intelligence" Grid.ColumnSpan="3" Grid.Row="5"  VerticalTextAlignment="Center" FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"/>
 
-        <Label Text="Semester2"  Grid.Row="4" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester2" Grid.ColumnSpan="3" TextColor="white" Grid.Row="6" FontSize="15" WidthRequest="200" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" BackgroundColor="#0080ff"/>
 
-        <Label Text="Comp 7211 User Interface Programming" Grid.Row="5" Grid.Column="0" BackgroundColor="#0080ff"/>
-        <Label Text="Comp.7216 Advance System Analysis and Design" Grid.Row="5" Grid.Column="1" BackgroundColor="#0080ff" />
-        <Label Text="GENR.7101 Project" Grid.Row="6" Grid.Column="0" BackgroundColor="#0080ff" />
-        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="7" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+        <Label Text="Comp 7211 User Interface Programming" Grid.ColumnSpan="3"  Grid.Row="7"   FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"  VerticalTextAlignment="Center"/>
+        <Label Text="Comp.7216 Advance System Analysis and Design" Grid.ColumnSpan="3" Grid.Row="8"    FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5"  VerticalTextAlignment="Center"/>
+        <Label Text="GENR.7101 Project" Grid.ColumnSpan="3" Grid.Row="9"  FontSize="15" HorizontalTextAlignment="Center" BackgroundColor="#51A2D5" VerticalTextAlignment="Center"/>
+        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="11" Grid.Column="0" Margin="0,15,0,0" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+        <!--<ImageButton x:Name="home" Clicked="home_Clicked" Grid.Row="11" Grid.Column="1" BorderColor="Black" HorizontalOptions="Center" Source="Resources/drawable/hm.PNG"></ImageButton>-->
+        <Button Text="Click Here For Requirements" x:Name="requirements" Grid.ColumnSpan="2" Clicked="requirement_Clicked" TextColor="DarkBlue"  Grid.Row="11" Grid.Column="1" HorizontalOptions="Center" FontSize="12" BackgroundColor="Transparent" />
+
     </Grid>
+
 </ContentPage>
+
+       
+        
