--- a/project/project/dip75.xaml
+++ b/project/project/dip75.xaml
@@ -2,41 +2,51 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="project.dip75">
-    <Grid Margin="10,10,10,10">
+    <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width=".5*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="20"/>
 
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="53"/>
+            <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
-        <StackLayout MinimumHeightRequest="30" MinimumWidthRequest="50" Grid.Row="0" Grid.ColumnSpan="2" BackgroundColor="Black" >
 
-            <Label Text="Graduate Diploma of Applied IT(level 7)"  FontSize="24" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+        <Label Text="Graduate Diploma of Applied IT(level 7)" Grid.Row="0" FontSize="25" Grid.ColumnSpan="3" TextColor="White" FontFamily="ovo" BackgroundColor="#0080ff"  VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
 
-        </StackLayout>
 
-        <Label Text="Semester1" Grid.Row="1" Grid.ColumnSpan="2"  FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester1" Grid.Row="1"  FontSize="15" VerticalTextAlignment= "Center" Grid.ColumnSpan="3" TextColor="white" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
 
-        <Button Text="Level 6 Elective" x:Name="level61elective" Clicked="level61elective_Clicked"  Grid.Row="2" Grid.Column="0" BackgroundColor="#0080ff"/>
-        <Button Text="Level 6 Elective" x:Name="level62elective" Clicked="level62elective_Clicked" Grid.Row="2" Grid.Column="1" BackgroundColor="#0080ff" />
-        <Button Text="Level 6 Elective" x:Name="level63elective" Clicked="level63elective_Clicked" Grid.Row="3" Grid.Column="0" BackgroundColor="#0080ff" />
-        <Button Text="Level 7 Elective" x:Name="level71elective" Clicked="level71elective_Clicked" Grid.Row="3" Grid.Column="1" BackgroundColor="#0080ff"/>
+        <Button Text="Level 6 Elective" x:Name="level61elective" Clicked="level61elective_Clicked"   Grid.ColumnSpan="3"  FontSize="15" Grid.Row="2" BackgroundColor="#51A2D5"/>
+        <Button Text="Level 6 Elective" x:Name="level62elective" Clicked="level62elective_Clicked"  Grid.ColumnSpan="3"  FontSize="15" Grid.Row="3" BackgroundColor="#51A2D5" />
+        <Button Text="Level 6 Elective" x:Name="level63elective" Clicked="level63elective_Clicked"  Grid.ColumnSpan="3" FontSize="15" Grid.Row="4"  BackgroundColor="#51A2D5" />
+        <Button Text="Level 7 Elective" x:Name="level71elective" Clicked="level71elective_Clicked" Grid.ColumnSpan="3" Grid.Row="5"   FontSize="15" BackgroundColor="#51A2D5"/>
 
-        <Label Text="Semester2"  Grid.Row="4" Grid.ColumnSpan="2" FontSize="20" VerticalTextAlignment= "Center" TextDecorations="Underline" TextColor="Black" FontFamily="ovo" BackgroundColor="#0080ff" HorizontalTextAlignment="Center"/>
+        <Label Text="Semester2" Grid.ColumnSpan="3" TextColor="white" Grid.Row="6" FontSize="15" WidthRequest="200" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" BackgroundColor="#0080ff"/>
 
-        <Button Text="Level 7 Elective" x:Name="level72elective" Clicked="level72elective_Clicked" Grid.Row="5" Grid.Column="0" BackgroundColor="#0080ff"/>
-        <Button Text="Level 7 Elective" x:Name="level73elective" Clicked="level73elective_Clicked" Grid.Row="5" Grid.Column="1" BackgroundColor="#0080ff" />
-        <Button Text="GENR.7101 Project" x:Name="level74elective" Clicked="level74elective_Clicked" Grid.Row="6" Grid.Column="0" BackgroundColor="#0080ff" />
-        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="7" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+        <Button Text="Level 7 Elective" x:Name="level72elective" Clicked="level72elective_Clicked" Grid.ColumnSpan="3"  Grid.Row="7"   FontSize="15" BackgroundColor="#51A2D5"  />
+        <Button Text="Level 7 Elective" x:Name="level73elective" Clicked="level73elective_Clicked" Grid.ColumnSpan="3" Grid.Row="8"    FontSize="15" BackgroundColor="#51A2D5"  />
+        <Label Text="GENR.7101 Project"  Grid.ColumnSpan="3" Grid.Row="9"  FontSize="15"  BackgroundColor="#51A2D5" />
+       
+        <ImageButton x:Name="back" Clicked="Back_Clicked" Grid.Row="11" Grid.Column="0" Margin="0,15,0,0" VerticalOptions="Center" HorizontalOptions="Center" Source="Assets/back.PNG"></ImageButton>
+        <!--<ImageButton x:Name="home" Clicked="home_Clicked" Grid.Row="11" Grid.Column="1" BorderColor="Black" HorizontalOptions="Center" Source="Resources/drawable/hm.PNG"></ImageButton>-->
+        <Button Text="Click Here For Requirements" x:Name="requirements" Grid.ColumnSpan="2" Clicked="requirement_Clicked" TextColor="DarkBlue"  Grid.Row="11" Grid.Column="1" HorizontalOptions="Center" FontSize="12" BackgroundColor="Transparent" />
+
     </Grid>
+
 </ContentPage>
+
+      
